# Voxel-Engine

./: CMakeLists.txt  README.md
dependencies/glad/include/glad/: glad.h
res/shader/: cube.frag  cube.vert  floor.frag  floor.vert  light.frag  light.vert  lightning.frag  lightning.vert  wall.frag  wall.vert  waterball.frag
src/: block.h  camera.cpp  camera.h  chunk_manager.cpp  chunk_manager.h  engine.cpp  engine.h  generator.cpp  generator.h  glad.c  lighting.cpp  lighting.h  main.cpp  maze.cpp  maze.h  physics.cpp  physics.h  player.cpp  player.h  q_math.cpp  renderer.cpp  renderer.h  shader.cpp  shader.h  spells.cpp  spells.h  types.h  weapon.cpp  weapon.h
